--- a/Matrix-Profile/build.gradle
+++ b/Matrix-Profile/build.gradle
@@ -7,7 +7,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.nd4j:nd4j-native-platform:1.0.0-beta6"
+    implementation("org.nd4j:nd4j-native-platform:1.0.0-beta6")
     compile group: 'com.github.wendykierp', name: 'JTransforms', version: '3.1'
     compile "com.google.guava:guava:16+"
 }
