--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation project(':FtcRobotController')
+    implementation project(':Matrix-Profile')
     implementation (name: 'RobotCore-release', ext: 'aar')
     implementation (name: 'Hardware-release', ext: 'aar')
     implementation (name: 'FtcCommon-release', ext: 'aar')
