--- a/Matrix-Profile/build.gradle
+++ b/Matrix-Profile/build.gradle
@@ -7,7 +7,10 @@ repositories {
 }
 
 dependencies {
-    implementation("org.nd4j:nd4j-native-platform:1.0.0-beta6")
+    implementation("org.nd4j:nd4j-native-platform:1.0.0-beta5") {
+        exclude module: "protobuf"
+        exclude module: "slf4j-api"
+    }
     compile group: 'com.github.wendykierp', name: 'JTransforms', version: '3.1'
     compile "com.google.guava:guava:16+"
 }
